--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -17,13 +17,25 @@
             {{ if .Site.Params.showQr }}
               {{ partial "contact-qr" . }}
             {{ end }}
+
         </div>
         <div>
           {{ .Content }}
+          <h3>Certifications</h3>
+          <ul class="list-inline list-social-icons mb-0">
+            {{ range .Site.Data.certifications }}
+                <li class="list-inline-item">
+                  <a href="{{ .proof }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
+                    <img src="{{ .badge }}" width=75 />
+                  </a>
+                </li>
+            {{ end }}
+          </ul>
+          <h3>Socialization</h3>
           <ul class="list-inline list-social-icons mb-0">
             {{ range .Site.Params.handles }}
                 <li class="list-inline-item">
-                  <a href="{{ .link }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
+                  <a href="{{ .proof }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
                       <i class="fab {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
