--- a/layouts/markdown/single.html
+++ b/layouts/markdown/single.html
@@ -1,11 +1,11 @@
 {{ define "main" }}
-<section class="resume-section p-3 p-lg-5 d-flex flex-column">
+<section class="pl-2 pt-2 d-flex flex-column">
   <div class="my-auto">
-  	<div class="mb-3 d-flex flex-row justify-content-between">
+  	<div class=" d-flex flex-row justify-content-between">
     	<h2 class="mb-0"><span class="text-primary">{{ .Title }}</span></h2>
     	<span class="">{{ .Date.Format "January 2, 2006" }}</span>
     </div>
-    <div>
+    <div class=" d-flex flex-column justify-content-between">
     	{{ .Content }}
     </div>
 </section>
