--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -13,7 +13,9 @@
         <h2 id="{{ urlize .Title }}"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
         <p>{{ .Content }}</p>
         {{ range .Pages }}
-          {{ partial (printf "%s%s" .Type "Summary") . }}
+          {{ if ne .Type "markdown" }}
+            {{ partial (printf "%s%s" .Type "Summary") . }}
+          {{ end }}
         {{ end }}
     {{ end }}
   </div>
